--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -86,7 +86,7 @@ footer img{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 200px;
     background: rgb(0,0,0);
     background: -moz-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
     background: -webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
@@ -104,6 +104,10 @@ footer img{
 }
 
 .game .card{border:2px solid #FFD700;}
+.game .modal-content{
+    background: rgba(136,4,4,1);
+    border:2px solid #FFD700;
+}
 
 
 
@@ -115,6 +119,7 @@ footer img{
     h3{font-size: 1.25rem;}
     .navbar-nav .nav-link{width: auto;}
     .logo{top: 0;left: calc(50% - 40px);width: 80px;}
+    .logo-img{top: 0;}
     .game-kind{height:calc(100vh - 47vw - 56px);padding-bottom: 0;}
     .navs-main{margin-top:0px;}
     .teach-box{width: 100%;height: 10%!important;}
