--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -44,7 +44,7 @@ footer img{
 
 
 /* new_index */
-.home-img{height: 400px;}
+.home-img{max-height: 350px;}
 .question .card{background: rgba(0,0,0,.75);border-color: #FFD700;}
 .question .card-header{background: rgba(136,4,4,.2);border-color: rgba(255,215,0,.5);}
 
