--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -31,6 +31,7 @@ h1,h2{white-space:nowrap;}
 }
 .line::before{margin-right: 1rem;}
 .line::after{margin-left: 1rem;}
+.fixed-bar{bottom: 0;right: 0;width: 150px;z-index: 1;}
 footer{
     background: rgb(0,0,0);
     background: -moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
