--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -112,10 +112,12 @@ footer img{
 }
 
 /* new_promotions */
-.promotions-img{
+.promotions-img,
+.contact-img{
     height: 270px;
 }
-.promotions-img::before{
+.promotions-img::before,
+.contact-img::before{
     content: '';
     position: absolute;
     top: 0;
@@ -144,14 +146,53 @@ footer img{
     z-index: 1;
 }
 .promotions-card{z-index: 2;}
-.promotions-img h2{
+.promotions-img h2,
+.contact-img h2{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     z-index: 1;
 }
 
-
+/* Contact Us */
+.contact section::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 270px;
+    background: rgb(0,0,0);
+    background: -moz-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
+}
+.contact h3{
+    z-index: 1;
+}
+.cbtn{
+    max-width: 240px;
+    font-size: 22px;
+    font-weight: 500;
+    background-color: transparent;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 100px;
+    padding: 10px 40px;
+}
+.ln{
+    fill: #3fbc01;
+    color: #3fbc01;
+    border-color: #3fbc01;
+}
+.cbtn:hover{
+    text-decoration: none;
+}
+.ln:hover{
+    color: #3fbc01;
+    opacity: .75;
+}
 
 
 @media screen and (max-width:767px) {
