--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -16,7 +16,7 @@ body{background: rgba(50,4,4,1);}
 .navbar-nav .logo{width:160px;}
 .scroll .logo{width:100px;}
 .logo-img{top:-22px;left:0;}
-h1,h2{white-space:nowrap;}
+h1,h2,h3{white-space:nowrap;}
 .bg-black-50{background-color: rgba(0,0,0,.5);}
 .bg-white-50{background-color: rgba(255,255,255,.5);}
 .color-y{color:#FFD700;text-shadow: 0px 0px 10px #fff;}
@@ -192,6 +192,32 @@ footer img{
 .ln:hover{
     color: #3fbc01;
     opacity: .75;
+}
+
+/* Diamond */
+.opacity-4{
+    opacity: .4;
+}
+.cloth::before{
+    position: absolute;
+    top: -28%;
+    left: -50%;
+    width: 100%;
+    background: rgb(222,216,4);
+    background: -moz-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    background: -webkit-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    background: linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
+    transform: rotateZ(-45deg);
+    transform-origin: right;
+    text-align: center;
+    padding: 4px 0;
+}
+.popular::before{
+    content: 'POPLAR';
+}
+.best::before{
+    content: 'BEST BUY';
 }
 
 
