--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -1,235 +1,208 @@
-body{background: rgba(50,4,4,1);}
-*{position: relative;}
-.ph-only{display: none;}
-.pc-only{display: flex;}
+/* All */
+body{background:rgba(50,4,4,1);}
+*{position:relative;}
+.ph-only{display:none;}
+.pc-only{display:flex;}
 .title-nav{
-    background: rgb(222,216,4);
-    background: -moz-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    background: -webkit-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    background: linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
+    background:rgb(222,216,4);
+    background:-moz-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    background:-webkit-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    background:linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
     z-index:20;
 }
 .p-title{padding-top:56px !important;}
 .top-0{top:0;}
-.navbar-nav .nav-link{width: 110px;}
+.navbar-nav .nav-link{width:110px;}
 .navbar-nav .logo{width:160px;}
+.dropdown-menu {
+    background-color:#000;
+    border:1px solid rgba(228,167,0,1);
+}
+.dropdown-item {color:#fff;}
 .scroll .logo{width:100px;}
 .logo-img{top:-22px;left:0;}
 h1,h2,h3{white-space:nowrap;}
-.bg-black-50{background-color: rgba(0,0,0,.5);}
-.bg-white-50{background-color: rgba(255,255,255,.5);}
-.color-y{color:#FFD700;text-shadow: 0px 0px 10px #fff;}
-.color-r{color:#880404;text-shadow: 0px 0px 10px #FF0;}
+.bg-black-50{background-color:rgba(0,0,0,.5);}
+.bg-white-50{background-color:rgba(255,255,255,.5);}
+.color-y{color:#FFD700;text-shadow:0px 0px 10px #fff;}
+.color-r{color:#880404;text-shadow:0px 0px 10px #FF0;}
 .line::before,.line::after{
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: #FFD700;
-    box-shadow: 0px 0px 10px #fff;
+    content:'';
+    display:block;
+    width:100%;
+    height:2px;
+    background-color:#FFD700;
+    box-shadow:0px 0px 10px #fff;
 }
-.line::before{margin-right: 1rem;}
-.line::after{margin-left: 1rem;}
-.fixed-bar{bottom: 0;right: 0;width: 150px;z-index: 3;}
+.line::before{margin-right:1rem;}
+.line::after{margin-left:1rem;}
+.fixed-bar{bottom:0;right:0;width:150px;z-index:3;}
 footer{
-    background: rgb(0,0,0);
-    background: -moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
-    background: -webkit-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#444444",GradientType=1);
+    background:rgb(0,0,0);
+    background:-moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
+    background:-webkit-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
+    background:linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#444444",GradientType=1);
 }
 footer img{
     -webkit-filter:drop-shadow(0px 0px 6px #FFD700);
 }
+.promotions-img,
+.contact-img,
+.diamond-img{
+    height:270px;
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:cover;
+}
+.promotions-img{background-image:url(../images/banner.jpg);}
+.contact-img{background-image:url(../images/banner.jpg);}
+.diamond-img{background-image:url(../images/banner.jpg);}
+.game ul::before,
+.promotions-img::before,
+.contact-img::before,
+.diamond-img::before,
+.game .tab-pane::before,
+.diamond section::after,
+.promotions section::after,
+.contact section::after{
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+}
+.game ul::before,
+.promotions-img::before,
+.contact-img::before,
+.diamond-img::before{
+    height:100%;
+    background:rgb(0,0,0);
+    background:-moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background:-webkit-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background:linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
+}
+.game .tab-pane::before,
+.diamond section::after,
+.promotions section::after,
+.contact section::after{
+    height:270px;
+    background:rgb(0,0,0);
+    background:-moz-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background:-webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    background:linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
+}
+.promotions-card{z-index:2;}
+.promotions-img h2,.contact-img h2,.diamond-img h2{z-index:1;}
 
 
 /* new_index */
-.home-img{max-height: 350px;}
-.question .card{background: rgba(0,0,0,.75);border-color: #FFD700;}
-.question .card-header{background: rgba(136,4,4,.2);border-color: rgba(255,215,0,.5);}
+.home-img{max-height:350px;}
+.question .card{background:rgba(0,0,0,.75);border-color:#FFD700;}
+.question .card-header{background:rgba(136,4,4,.2);border-color:rgba(255,215,0,.5);}
 
 
 /* new_game */
-.game ul{height: 160px;background: url(../images/casino-software.jpg) no-repeat bottom/cover;}
-.game ul::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(0,0,0);
-    background: -moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%);
-    background: -webkit-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 50%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
-}
+.game ul{height:160px;background:url(../images/casino-software.jpg) no-repeat bottom/cover;}
+.diamond-btn,
 .game-btn{
-    background: rgb(136,4,4);
-    background: -moz-linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
-    background: -webkit-linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
-    background: linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
+    background:rgb(136,4,4);
+    background:-moz-linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
+    background:-webkit-linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
+    background:linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
     border:2px solid #FFD700;
-    color: rgba(255,255,255,1);
+    color:rgba(255,255,255,1);
 }
-.game-btn:hover{color: rgba(255,255,255,1);box-shadow: 0 0 10px #FFD700;}
+.diamond-btn:hover,.game-btn:hover{color:rgba(255,255,255,1);box-shadow:0 0 10px #FFD700;}
+.diamond-btn.active,
 .game-btn.active{
-    background: rgb(136,4,4);
-    background: -moz-linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    background: -webkit-linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    background: linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
-}
-.game .tab-pane::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 200px;
-    background: rgb(0,0,0);
-    background: -moz-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
+    background:rgb(136,4,4);
+    background:-moz-linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    background:-webkit-linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    background:linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
 }
 .game h2{
-    background: rgb(228,164,9);
-    background: -moz-linear-gradient(0deg, rgba(228,164,9,1) 0%, rgba(252,255,160,1) 17%, rgba(255,255,0,1) 24%, rgba(228,164,9,1) 50%, rgba(255,255,186,1) 61%, rgba(255,180,0,1) 84%, rgba(255,255,0,1) 100%);
-    background: -webkit-linear-gradient(0deg, rgba(228,164,9,1) 0%, rgba(252,255,160,1) 17%, rgba(255,255,0,1) 24%, rgba(228,164,9,1) 50%, rgba(255,255,186,1) 61%, rgba(255,180,0,1) 84%, rgba(255,255,0,1) 100%);
-    background: linear-gradient(0deg, rgba(228,164,9,1) 0%, rgba(252,255,160,1) 17%, rgba(255,255,0,1) 24%, rgba(228,164,9,1) 50%, rgba(255,255,186,1) 61%, rgba(255,180,0,1) 84%, rgba(255,255,0,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e4a409",endColorstr="#ffff00",GradientType=1);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    background:rgb(228,164,9);
+    background:-moz-linear-gradient(0deg, rgba(228,164,9,1) 0%, rgba(252,255,160,1) 17%, rgba(255,255,0,1) 24%, rgba(228,164,9,1) 50%, rgba(255,255,186,1) 61%, rgba(255,180,0,1) 84%, rgba(255,255,0,1) 100%);
+    background:-webkit-linear-gradient(0deg, rgba(228,164,9,1) 0%, rgba(252,255,160,1) 17%, rgba(255,255,0,1) 24%, rgba(228,164,9,1) 50%, rgba(255,255,186,1) 61%, rgba(255,180,0,1) 84%, rgba(255,255,0,1) 100%);
+    background:linear-gradient(0deg, rgba(228,164,9,1) 0%, rgba(252,255,160,1) 17%, rgba(255,255,0,1) 24%, rgba(228,164,9,1) 50%, rgba(255,255,186,1) 61%, rgba(255,180,0,1) 84%, rgba(255,255,0,1) 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#e4a409",endColorstr="#ffff00",GradientType=1);
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
 }
 
 .game .card{border:2px solid #FFD700;}
 .game .modal-content{
-    background: rgba(136,4,4,1);
+    background:rgba(136,4,4,1);
     border:2px solid #FFD700;
 }
 
 /* new_promotions */
-.promotions-img,
-.contact-img{
-    height: 270px;
-}
-.promotions-img::before,
-.contact-img::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgb(0,0,0);
-    background: -moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    background: -webkit-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
-    z-index: 1;
-}
-.promotions section::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 270px;
-    background: rgb(0,0,0);
-    background: -moz-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
-    z-index: 1;
-}
-.promotions-card{z-index: 2;}
-.promotions-img h2,
-.contact-img h2{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    z-index: 1;
-}
+
 
 /* Contact Us */
-.contact section::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 270px;
-    background: rgb(0,0,0);
-    background: -moz-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
-}
-.contact h3{
-    z-index: 1;
+.contact h4{
+    z-index:1;
 }
 .cbtn{
-    max-width: 240px;
-    font-size: 22px;
-    font-weight: 500;
-    background-color: transparent;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 100px;
-    padding: 10px 40px;
+    max-width:240px;
+    font-size:22px;
+    font-weight:500;
+    background-color:transparent;
+    border-style:solid;
+    border-width:3px;
+    border-radius:100px;
+    padding:10px 40px;
 }
-.ln{
-    fill: #3fbc01;
-    color: #3fbc01;
-    border-color: #3fbc01;
-}
-.cbtn:hover{
-    text-decoration: none;
-}
-.ln:hover{
-    color: #3fbc01;
-    opacity: .75;
-}
+.fb{fill:#1976d2;color:#1976d2;border-color:#1976d2;}
+.ln{fill:#3fbc01;color:#3fbc01;border-color:#3fbc01;}
+.cbtn:hover{text-decoration:none;}
+.fb:hover{color:#1976d2;opacity:.75;}
+.ln:hover{color:#3fbc01;opacity:.75;}
+.cbtn img{width: 30px;height: 30px;}
 
 /* Diamond */
+.diamond .container{z-index:2;}
 .opacity-4{
-    opacity: .4;
+    opacity:.4;
 }
 .cloth::before{
-    position: absolute;
-    top: -28%;
-    left: -50%;
-    width: 100%;
-    background: rgb(222,216,4);
-    background: -moz-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    background: -webkit-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    background: linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
-    transform: rotateZ(-45deg);
-    transform-origin: right;
-    text-align: center;
-    padding: 4px 0;
+    position:absolute;
+    top:-28%;
+    left:-50%;
+    width:100%;
+    background:rgb(222,216,4);
+    background:-moz-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    background:-webkit-linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    background:linear-gradient(0deg,rgba(255,215,0,1) 0%, rgba(136,4,4,1) 20%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
+    transform:rotateZ(-45deg);
+    transform-origin:right;
+    text-align:center;
+    padding:4px 0;
 }
 .popular::before{
-    content: 'POPLAR';
+    content:'POPLAR';
 }
 .best::before{
-    content: 'BEST BUY';
+    content:'BEST BUY';
 }
 
 
 @media screen and (max-width:767px) {
-    .ph-only{display: flex;}
-    .pc-only{display: none;}
-    h3{font-size: 1.25rem;}
-    .navbar-nav .nav-link{width: auto;}
-    .logo{top: 0;left: calc(50% - 40px);width: 80px;}
-    .logo-img{top: 0;}
-    .game-kind{height:calc(100vh - 47vw - 56px);padding-bottom: 0;}
+    .ph-only{display:flex;}
+    .pc-only{display:none;}
+    h3{font-size:1.25rem;}
+    .navbar-nav .nav-link{width:auto;}
+    .logo{top:0;left:calc(50% - 40px);width:80px;}
+    .logo-img{top:0;}
+    .game-kind{height:calc(100vh - 47vw - 56px);padding-bottom:0;}
     .navs-main{margin-top:0px;}
-    .teach-box{width: 100%;height: 10%!important;}
-    .teach-box.show{width: 100%;height: 80%!important;}
+    .teach-box{width:100%;height:10%!important;}
+    .teach-box.show{width:100%;height:80%!important;}
 }
