修改遊戲頁載入json的寫法

--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -135,12 +135,10 @@ footer img{
     -webkit-background-clip:text;
     -webkit-text-fill-color:transparent;
 }
-
 .game .card{border:2px solid #FFD700;}
-.game .modal-content{
-    background:rgba(136,4,4,1);
-    border:2px solid #FFD700;
-}
+.game .modal-content{background:rgba(136,4,4,1);border:2px solid #FFD700;}
+.game .modal-content{height:calc(100vh - 3.5rem);}
+
 
 /* new_promotions */
 
