改很多 icon/json載入方法

--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -13,7 +13,7 @@ body{background:rgba(50,4,4,1);}
 }
 .p-title{padding-top:56px !important;}
 .top-0{top:0;}
-.navbar-nav .nav-link{width:110px;}
+.navbar-nav .nav-link{width:80px;}
 .navbar-nav .logo{width:160px;}
 .dropdown-menu {
     background-color:#000;
@@ -38,6 +38,7 @@ h1,h2,h3{white-space:nowrap;}
 .line::before{margin-right:1rem;}
 .line::after{margin-left:1rem;}
 .fixed-bar{bottom:0;right:0;width:150px;z-index:3;}
+main{margin-top: 56px;}
 footer{
     background:rgb(0,0,0);
     background:-moz-linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
