3種遊戲icon修改 修改購買鑽石的選項

--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -191,8 +191,11 @@ footer img{
     text-align:center;
     padding:4px 0;
 }
-.popular::before{
-    content:'POPLAR';
+.popular.en::before{
+    content:'POPULAR';
+}
+.popular.th::before{
+    content:'สุดฮิต';
 }
 .best::before{
     content:'BEST BUY';
