--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -27,6 +27,7 @@ body{background:rgba(50,4,4,1);}
 h1,h2,h3{white-space:nowrap;}
 .bg-black-50{background-color:rgba(0,0,0,.5);}
 .bg-white-50{background-color:rgba(255,255,255,.5);}
+.bg-dark-red{background:rgba(50,4,4,1);}
 .color-y{color:#FFD700;text-shadow:0px 0px 10px #fff;}
 .color-r{color:#880404;text-shadow:0px 0px 10px #FF0;}
 .line::before,.line::after{
@@ -149,9 +150,19 @@ footer img{
 .game .card{border:2px solid #FFD700;}
 .game .modal-content{background:rgba(136,4,4,1);border:2px solid #FFD700;}
 .game .modal-content{max-height:calc(100vh - 3.5rem);}
-@media (min-width: 576px){
+@media (min-width: 767px){
     .modal-dialog {
         max-width: 700px;
+    }
+}
+@media (min-width: 1023px){
+    .modal-dialog {
+        max-width: 900px;
+    }
+}
+@media (min-width: 1279px){
+    .modal-dialog {
+        max-width: 1080px;
     }
 }
 
