--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -104,6 +104,7 @@ footer img{
     background:-webkit-linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
     background:linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
+    z-index:-1;
 }
 .promotions-card{z-index:2;}
 .promotions-img h2,.contact-img h2,.diamond-img h2{z-index:1;}
