--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -123,25 +123,11 @@ footer img{
 .game ul{height:270px;background:url(../images/Game-AW-WEB-BannerH-13012022.png) no-repeat bottom/cover;}
 .leaderboard-btn,
 .diamond-btn,
-.game-btn{
-    background:rgb(136,4,4);
-    background:-moz-linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
-    background:-webkit-linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
-    background:linear-gradient(0deg,rgba(136,4,4,.5) 0%, rgba(110,4,4,.5) 50%, rgba(136,4,4,.5) 70%, rgba(233,4,4,.5) 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
-    border:2px solid #FFD700;
-    color:rgba(255,255,255,1);
-}
 .leaderboard-btn:hover.diamond-btn:hover,.game-btn:hover{color:rgba(255,255,255,1);box-shadow:0 0 10px #FFD700;}
 .leaderboard-btn.active,
 .diamond-btn.active,
-.game-btn.active{
-    background:rgb(136,4,4);
-    background:-moz-linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    background:-webkit-linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    background:linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
-}
+.game-icon{max-width: 30vh;}
+.nav-link.active{background-color:transparent !important;-webkit-filter:drop-shadow(0px 0px 10px rgba(252,255,160,1));}
 .game h2{
     background:rgb(228,164,9);
     background:-moz-linear-gradient(0deg, rgba(228,164,9,1) 0%, rgba(252,255,160,1) 17%, rgba(255,255,0,1) 24%, rgba(228,164,9,1) 50%, rgba(255,255,186,1) 61%, rgba(255,180,0,1) 84%, rgba(255,255,0,1) 100%);
