--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -141,7 +141,7 @@ footer img{
 
 /* new_index */
 /* .home-img{height:46vw;max-height:350px;} */
-.home-img .carousel-item{float:unset;width:unset;margin-right:0;}
+.home-img .carousel-item{float:unset;height: 23.44vw;margin-right:0;}
 .question .card{background:rgba(0,0,0,.75);border-color:#FFD700;}
 .question .card-header{background:rgba(136,4,4,.2);border-color:rgba(255,215,0,.5);}
 .share-box{height:60px;}
@@ -270,6 +270,7 @@ footer img{
     .btnBox{width: 120px;}
     .logo{top:0;left:calc(50% - 40px);width:80px;}
     .logo-img{top:0;}
+    .home-img .carousel-item{height:42.27vw;}
     .game-kind{height:calc(100vh - 47vw - 56px);padding-bottom:0;}
     .navs-main{margin-top:0px;}
     .teach-box{width:100%;height:10%!important;}
